# python-default-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
